--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mw"]
 	path = mw
 	url = https://github.com/parthahluwalia/wam-mw.git
+[submodule "ide"]
+	path = ide
+	url = https://github.com/parthahluwalia/wam-mw.git
